Relative address, much better

--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -21,9 +21,9 @@
             </label>
             <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" name="password" type="password">
           </div>
-          <a href="http://localhost:5152/resetPage" id="forgot">Forgot Password?</a>
+          <a href="/resetPage" id="forgot">Forgot Password?</a>
           <div class="flex items-center justify-between">
-            <a href="http://localhost:5152/registerPage" id="gotosignup" class="tab">Register</a>
+            <a href="/registerPage" id="gotosignup" class="tab">Register</a>
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
               Sign In
             </button>
