Make update password work

--- a/templates/resetPage.html
+++ b/templates/resetPage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="flex p-4 m-6 justify-center">
-        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="GET" action="/resetPassword/{username}/{oldpassword}" >
+        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="POST" action="/resetPassword/" >
           <div class="mb-4">
             <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
               Username
@@ -16,7 +16,7 @@
             <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" name="username" type="text">
           </div>
           <div class="mb-6">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="oldpassword">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
               OldPassword
             </label>
             <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" name="password" type="password">
@@ -25,7 +25,6 @@
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
               Reset password.
             </button>
-            <!--Redirect to updatePasswordPage-->
           </div>
         </form>
       </div>
